syntax = "proto3";

option go_package = "grpc/pb";

message GetByJobIdRequest {
    string jobid = 1;
    string defautexecutor =2;
}

message GetByJobIdResponse {
    int64 idrequest = 1;
    ResourceCreated resourceCreated =2;
}

message ResourceCreated {
    int64 id =1 ;
    string provider = 2;
}

service JobResourceConfigurationService {
    rpc GetByJobId(GetByJobIdRequest) returns (GetByJobIdResponse) {}
}